--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       body {
         font-family: Arial, sans-serif;
         background-size: cover;
-
+        background-color: #928e85;
         margin: 0;
         padding: 20px;
       }
